# linux-capture-studio

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE-NOTES.txt  SECURITY.md  SOURCE-SHA256SUMS.txt  io.github.linuxcapturestudio.LinuxCaptureStudio.yml  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: APPLY_WORKFLOW.md  COMPATIBILITY.md  DEVICE_SUPPORT.md  FLATPAK.md  HDR.md  HDR_CALIBRATION.md  INTEGRATED_SESSIONS.md  KNOWN_ISSUES.md  NATIVE_HDR.md  PREMIUM_UI.md  QUALITY_AND_SMOOTHNESS.md  RECENTRAL4_AUDIT_FINDINGS.md  RECORDING_STUDIO.md  RELEASE_CHECKLIST.md  ROADMAP.md  SETTINGS_MENU.md  STREAMING.md  STUDIO_POLISH.md  VRR.md
packaging/: io.github.linuxcapturestudio.LinuxCaptureStudio.desktop  io.github.linuxcapturestudio.LinuxCaptureStudio.flatpak.desktop  io.github.linuxcapturestudio.LinuxCaptureStudio.metainfo.xml
scripts/: build-flatpak.sh  check-framepaced-preview.sh  check-hdr-backend.sh  check-p010-backend.sh  check-recording-studio.sh  check-runtime.sh  check-streaming.sh  collect-capture-device-profile.sh  collect-crash-diagnostics.sh  collect-e575-hid-contract.sh  collect-freeze-diagnostics.sh  install-passwordless-reset.sh  install-user.sh  linux-capture-studio-reset-helper  release-check.sh  reset-gc575.sh  run-flatpak.sh  run-linux-capture-studio.sh  test-gc575-audio.sh  test-gc575-recording.sh  test-p010-processing-modes.sh  uninstall-passwordless-reset.sh  uninstall-user.sh
src/: main.c  meson.build  transition.c
